--- a/ocpp-2w-proxy.ini
+++ b/ocpp-2w-proxy.ini
@@ -17,7 +17,7 @@ ping_timeout = 60
 
 [ext-server]
 ; Primary CSMS external server
-server = ws://localhost:9999/
-;server = wss://abb.cdlink.chargedot.com:9043/
+server = ws://ocpp.it34.com:80
+;server = wss://abb.cdlink.chargedot.com:9043
 ; (Optional) Secondary CSMS external server
-secondary_server = ws://localhost:9998/
+secondary_server = ws://192.168.188.176:8888
