--- a/compose.yaml
+++ b/compose.yaml
@@ -4,5 +4,7 @@ services:
     restart: always
     ports:
       - 8321:8321
+    environment:
+      - TZ=Europe/Copenhagen
     command: [ "python", "ocpp-2w-proxy.py"]
 
