add split function

--- a/ocpp-2w-proxy.ini
+++ b/ocpp-2w-proxy.ini
@@ -17,7 +17,12 @@ ping_timeout = 60
 
 [ext-server]
 ; Primary CSMS external server
+; Primary RFID authentication
 server = ws://ocpp.it34.com:80
+primary_rfid = ABCDEF123
+
 ;server = wss://abb.cdlink.chargedot.com:9043
 ; (Optional) Secondary CSMS external server
+; Secondary RFID authentication
 secondary_server = ws://192.168.188.176:8888
+secondary_rfid = XYZ123
